import {
  Body,
  Controller,
  Get,
  Param,
  Post,
  Put,
  Query,
  Request,
  Res,
  UnauthorizedException,
  UseGuards,
} from '@nestjs/common';
import { ApiBody, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
import { Response } from 'express';

// âœ… ë¡œì»¬ ì„œë¹„ìŠ¤(ìš”ë¦¬ì‚¬)ë¥¼ ì§ì ‘ ê°€ì ¸ì˜µë‹ˆë‹¤.
import { AuthService } from './auth.service';

import { LoginDto } from './dto/login.dto';
import { RegisterDto } from './dto/register.dto';
import { ResetPasswordDto } from './dto/reset-password.dto';
import { RequestPasswordResetDto } from './dto/request-password-reset.dto';
import {
  GoogleOAuthGuard,
  SessionAuthGuard,
  RolesGuard,
  Roles,
  Facebook0AuthGuard,
  KakaoAuthGuard,
  Apple0AuthGuard,
  Session,
} from 'libs/common/src';
import { SocialProvider } from 'types/auth/auth';

@ApiTags('Authentication')
@Controller('auth')
export class AuthController {
  // âœ… [ë³€ê²½ 1] ë³µì¡í•œ ClientGrpc ëŒ€ì‹  AuthServiceë¥¼ ì§ì ‘ ì£¼ì…ë°›ìŠµë‹ˆë‹¤.
  constructor(private readonly authService: AuthService) {}

  // âŒ [ì‚­ì œë¨] onModuleInit: 8001ë²ˆ í¬íŠ¸ì™€ ì—°ê²°í•˜ëŠ” ê³¼ì •ì´ í•„ìš” ì—†ìŠµë‹ˆë‹¤.
  // âŒ [ì‚­ì œë¨] grpcToHttpStatus: gRPC ì—ëŸ¬ë¥¼ ë³€í™˜í•  í•„ìš”ê°€ ì—†ìŠµë‹ˆë‹¤. (NestJS ê¸°ë³¸ ì—ëŸ¬ ì‚¬ìš©)

  @Get()
  @UseGuards(SessionAuthGuard)
  getHello(): string {
    return 'Auth System is running (Monolith Mode)';
  }

  @Get('admin')
  @UseGuards(SessionAuthGuard, RolesGuard)
  @Roles('ADMIN', 'SUPERADMIN')
  @ApiOperation({ summary: 'Admin only endpoint (example)' })
  @ApiResponse({
    status: 200,
    description: 'Access granted for admin users.',
  })
  getAdminData(): string {
    return 'This is admin-only data';
  }

  // --- ê´€ë¦¬ì í†µê³„ API ---
  @Get('admin/stats')
  @ApiOperation({ summary: 'Get admin dashboard statistics' })
  @ApiResponse({ status: 200, description: 'Admin stats retrieved.' })
  async getAdminStats(@Session() sessionId: string) {
    if (!sessionId) {
      throw new UnauthorizedException('No session provided');
    }

    // ì„¸ì…˜ì—ì„œ ì‚¬ìš©ì ì •ë³´ í™•ì¸ í›„ ADMINì¸ì§€ ê²€ì¦
    const profile = await this.authService.getProfile(sessionId);
    if (profile.user?.role !== 5) {
      throw new UnauthorizedException('Admin access required');
    }

    return await this.authService.getAdminStats();
  }

  // --- 1. íšŒì›ê°€ì… ---
  @Post('register')
  @ApiOperation({ summary: 'Register a new account' })
  @ApiBody({ type: RegisterDto })
  @ApiResponse({
    status: 201,
    description: 'User registered successfully.',
  })
  async register(@Body() registerDto: RegisterDto) {
    // âœ… [ë³€ê²½ 2] firstValueFrom ì—†ì´ ë°”ë¡œ í•¨ìˆ˜ë¥¼ í˜¸ì¶œí•©ë‹ˆë‹¤.
    return await this.authService.register(registerDto);
  }

  // --- 2. OTP ë°œì†¡ ---
  @Post('send-otp')
  @ApiOperation({ summary: 'Send verification OTP to email' })
  @ApiBody({ schema: { example: { email: 'user@example.com' } } })
  @ApiResponse({ status: 200, description: 'OTP sent successfully.' })
  async sendOtp(@Body() { email }: { email: string }) {
    // âœ… ì™¸ë¶€ ì„œë²„ í˜¸ì¶œ X -> ë‚´ë¶€ í•¨ìˆ˜ ì‹¤í–‰ O
    return await this.authService.sendOtp(email);
  }

  // --- 3. OTP ê²€ì¦ ---
  @Post('verify-otp')
  @ApiOperation({ summary: 'Verify OTP code' })
  @ApiBody({
    schema: { example: { email: 'user@example.com', code: '123456' } },
  })
  @ApiResponse({ status: 200, description: 'OTP verified successfully.' })
  async verifyOtp(@Body() body: { email: string; code: string }) {
    return await this.authService.verifyOtp(body.email, body.code);
  }

  // --- 4. ë¡œê·¸ì¸ ---
  @Post('login')
  @ApiOperation({ summary: 'Login with email and password' })
  @ApiBody({ type: LoginDto })
  @ApiResponse({
    status: 200,
    description: 'Login successful. Session cookie set.',
  })
  async login(
    @Body() loginDto: LoginDto,
    @Res({ passthrough: true }) res: Response,
  ) {
    // âœ… try-catchë¥¼ ì œê±°í•´ë„ ë©ë‹ˆë‹¤. (ì„œë¹„ìŠ¤ì—ì„œ ì—ëŸ¬ë¥¼ ë˜ì§€ë©´ NestJSê°€ ì•Œì•„ì„œ ì²˜ë¦¬í•¨)
    const result = await this.authService.login(loginDto);

    const sessionId = String(result.sessionId);

    // ì¿ í‚¤ ì„¤ì • (domain ì œê±°í•˜ì—¬ í˜„ì¬ ë„ë©”ì¸ ì‚¬ìš©)
    res.cookie('sessionId', sessionId, {
      httpOnly: true,
      secure: false, // ë¡œì»¬ ê°œë°œì—ì„œëŠ” false
      sameSite: 'lax',
      maxAge: 2 * 60 * 60 * 1000,
      path: '/',
    });

    console.log('[Login] ì¿ í‚¤ ì„¤ì • ì™„ë£Œ:', {
      sessionId: sessionId.substring(0, 20) + '...',
      httpOnly: true,
      sameSite: 'lax',
    });

    return result;
  }

  // --- 5. í”„ë¡œí•„ ì¡°íšŒ ---
  @Get('profile')
  @ApiOperation({ summary: 'Get current user profile' })
  @ApiResponse({
    status: 200,
    description: 'User profile retrieved successfully.',
  })
  async getProfile(@Session() sessionId: string, @Request() req: any) {
    console.log('[getProfile] === í”„ë¡œí•„ ì¡°íšŒ ìš”ì²­ ===');
    console.log(
      '[getProfile] cookies.sessionId:',
      req.cookies?.sessionId ? 'EXISTS' : 'NONE',
    );
    console.log(
      '[getProfile] Authorization header:',
      req.headers?.authorization
        ? req.headers.authorization.substring(0, 30) + '...'
        : 'NONE',
    );
    console.log(
      '[getProfile] Extracted sessionId:',
      sessionId ? sessionId.substring(0, 30) + '...' : 'NULL',
    );

    if (!sessionId) {
      console.log('[getProfile] FAIL: sessionIdê°€ null/undefined');
      throw new UnauthorizedException('No session provided');
    }
    return await this.authService.getProfile(sessionId);
  }

  // --- 6. ë¡œê·¸ì•„ì›ƒ ---
  @Post('logout')
  @ApiOperation({ summary: 'Logout current user' })
  @ApiResponse({
    status: 200,
    description: 'Logout successful. Session cookie cleared.',
  })
  async logout(
    @Session() sessionId: string,
    @Res({ passthrough: true }) res: Response,
  ) {
    const result = await this.authService.logout(sessionId);

    res.clearCookie('sessionId', {
      path: '/',
    });

    return result;
  }

  // --- 7. ë¹„ë°€ë²ˆí˜¸ ì´ˆê¸°í™” ---
  @Post('request-password-reset')
  @ApiOperation({ summary: 'Request password reset email' })
  @ApiBody({ type: RequestPasswordResetDto })
  async requestPasswordReset(@Body() { email }: RequestPasswordResetDto) {
    return await this.authService.requestPasswordReset(email);
  }

  @Post('reset-password')
  @ApiOperation({ summary: 'Reset password with token' })
  @ApiBody({ type: ResetPasswordDto })
  async resetPassword(@Body() { token, newPassword }: ResetPasswordDto) {
    return await this.authService.resetPassword(token, newPassword);
  }

  // --- 8. ë¹„ë°€ë²ˆí˜¸ ë³€ê²½ (ì´ë©”ì¼ ê³„ì •ë§Œ) ---
  @Post('change-password')
  @ApiOperation({ summary: 'Change password (email accounts only)' })
  @ApiBody({
    schema: { example: { oldPassword: 'current', newPassword: 'new123' } },
  })
  async changePassword(
    @Session() sessionId: string,
    @Body() body: { oldPassword: string; newPassword: string },
  ) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.changePassword(
      sessionId,
      body.oldPassword,
      body.newPassword,
    );
  }

  // --- 9. í”„ë¡œí•„ ìƒì„¸ ì¡°íšŒ ---
  @Get('my/profile-detail')
  @ApiOperation({ summary: 'Get detailed profile info' })
  async getProfileDetail(@Session() sessionId: string) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.getProfileDetail(sessionId);
  }

  // --- 10. íšŒì›íƒˆí‡´ ---
  @Post('delete-account')
  @ApiOperation({ summary: 'Request account deletion (soft delete, 90 days)' })
  async deleteAccount(@Session() sessionId: string) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.requestAccountDeletion(sessionId);
  }

  // --- 11. ì•Œë¦¼ ì„¤ì • ì¡°íšŒ ---
  @Get('my/notification-settings')
  @ApiOperation({ summary: 'Get notification settings' })
  async getNotificationSettings(@Session() sessionId: string) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.getNotificationSettings(sessionId);
  }

  // --- 12. ì•Œë¦¼ ì„¤ì • ë³€ê²½ ---
  @Put('my/notification-settings')
  @ApiOperation({ summary: 'Update notification settings' })
  @ApiBody({ schema: { example: { sms: true, email: true, kakao: false } } })
  async updateNotificationSettings(
    @Session() sessionId: string,
    @Body() body: { sms: boolean; email: boolean; kakao: boolean },
  ) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.updateNotificationSettings(
      sessionId,
      body.sms,
      body.email,
      body.kakao,
    );
  }

  // --- 13. ê³ ê°ì„¼í„° ë¬¸ì˜ ì‘ì„± ---
  @Post('support-ticket')
  @ApiOperation({ summary: 'Create a support ticket' })
  @ApiBody({
    schema: { example: { title: 'ë¬¸ì˜ ì œëª©', content: 'ë¬¸ì˜ ë‚´ìš©' } },
  })
  async createSupportTicket(
    @Session() sessionId: string,
    @Body() body: { title: string; content: string },
  ) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.createSupportTicket(
      sessionId,
      body.title,
      body.content,
    );
  }

  // --- 14. ë‚´ ë¬¸ì˜ ëª©ë¡ ---
  @Get('my/support-tickets')
  @ApiOperation({ summary: 'Get my support tickets' })
  async getMySupportTickets(@Session() sessionId: string) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    return await this.authService.getMySupportTickets(sessionId);
  }

  // --- 15. Admin: ëª¨ë“  ë¬¸ì˜ ì¡°íšŒ ---
  @Get('admin/support-tickets')
  @ApiOperation({ summary: 'Get all support tickets (admin)' })
  async getAllSupportTickets(@Session() sessionId: string) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    const profile = await this.authService.getProfile(sessionId);
    if (profile.user?.role !== 5)
      throw new UnauthorizedException('Admin access required');
    return await this.authService.getAllSupportTickets();
  }

  // --- 16. Admin: ë¬¸ì˜ ë‹µë³€ ---
  @Put('admin/support-tickets/:id')
  @ApiOperation({ summary: 'Answer a support ticket (admin)' })
  @ApiBody({ schema: { example: { answer: 'ë‹µë³€ ë‚´ìš©' } } })
  async answerSupportTicket(
    @Session() sessionId: string,
    @Param('id') id: string,
    @Body() body: { answer: string },
  ) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    const profile = await this.authService.getProfile(sessionId);
    if (profile.user?.role !== 5)
      throw new UnauthorizedException('Admin access required');
    return await this.authService.answerSupportTicket(id, body.answer);
  }

  // --- 17. Admin: í™œë™ ë¡œê·¸ ì¡°íšŒ ---
  @Get('admin/activity-logs')
  @ApiOperation({ summary: 'Get activity logs (admin, sortable/filterable)' })
  async getActivityLogs(
    @Session() sessionId: string,
    @Query('actionType') actionType?: string,
    @Query('userName') userName?: string,
    @Query('page') page?: string,
    @Query('limit') limit?: string,
    @Query('sortField') sortField?: string,
    @Query('sortOrder') sortOrder?: 'asc' | 'desc',
  ) {
    if (!sessionId) throw new UnauthorizedException('No session provided');
    const profile = await this.authService.getProfile(sessionId);
    if (profile.user?.role !== 5)
      throw new UnauthorizedException('Admin access required');
    return await this.authService.getActivityLogs({
      actionType,
      userName,
      page: page ? parseInt(page) : 1,
      limit: limit ? parseInt(limit) : 20,
      sortField: sortField || 'createdAt',
      sortOrder: sortOrder || 'desc',
    });
  }

  // ==========================================
  // [ì†Œì…œ ë¡œê·¸ì¸] ì¤‘ë³µ ì½”ë“œë¥¼ ì œê±°í•˜ê³  ë²„ê·¸ë¥¼ ìˆ˜ì •í–ˆìŠµë‹ˆë‹¤.
  // ==========================================

  // --- Google ---
  @Get('google')
  @UseGuards(GoogleOAuthGuard)
  @ApiOperation({ summary: 'Initiate Google OAuth login' })
  async googleAuth() {}

  @Get('google/callback')
  @UseGuards(GoogleOAuthGuard)
  @ApiOperation({ summary: 'Google OAuth callback' })
  async googleAuthRedirect(
    @Request() req: any,
    @Res({ passthrough: true }) res: Response,
  ) {
    return this.handleSocialLogin(req, res, SocialProvider.GOOGLE);
  }

  // --- Facebook ---
  @Get('facebook')
  @UseGuards(Facebook0AuthGuard)
  @ApiOperation({ summary: 'Initiate Facebook OAuth login' })
  async facebookAuth() {}

  @Get('facebook/callback')
  @UseGuards(Facebook0AuthGuard)
  @ApiOperation({ summary: 'Facebook OAuth callback' })
  async facebookAuthRedirect(
    @Request() req: any,
    @Res({ passthrough: true }) res: Response,
  ) {
    // ğŸš¨ ê¸°ì¡´ ì½”ë“œ ë²„ê·¸ ìˆ˜ì •: providerê°€ GOOGLEë¡œ ë˜ì–´ ìˆë˜ ê²ƒì„ FACEBOOKìœ¼ë¡œ ë³€ê²½
    return this.handleSocialLogin(req, res, SocialProvider.FACEBOOK);
  }

  // --- Kakao ---
  @Get('kakao')
  @UseGuards(KakaoAuthGuard)
  @ApiOperation({ summary: 'Initiate Kakao OAuth login' })
  async kakaoAuth() {}

  @Get('kakao/callback')
  @UseGuards(KakaoAuthGuard)
  @ApiOperation({ summary: 'Kakao OAuth callback' })
  async kakaoOAuthRedirect(
    @Request() req: any,
    @Res({ passthrough: true }) res: Response,
  ) {
    // ğŸš¨ ê¸°ì¡´ ì½”ë“œ ë²„ê·¸ ìˆ˜ì •: providerê°€ GOOGLEë¡œ ë˜ì–´ ìˆë˜ ê²ƒì„ KAKAOë¡œ ë³€ê²½
    return this.handleSocialLogin(req, res, SocialProvider.KAKAO);
  }

  // --- Apple ---
  @Get('apple')
  @UseGuards(Apple0AuthGuard)
  @ApiOperation({ summary: 'Initiate Apple OAuth Login' })
  async appleAuth() {}

  @Get('apple/callback')
  @UseGuards(Apple0AuthGuard)
  @ApiOperation({ summary: 'Apple OAuth callback' })
  async AppleOAuthRedirect(
    @Request() req: any,
    @Res({ passthrough: true }) res: Response,
  ) {
    // ğŸš¨ ê¸°ì¡´ ì½”ë“œ ë²„ê·¸ ìˆ˜ì •: providerê°€ GOOGLEë¡œ ë˜ì–´ ìˆë˜ ê²ƒì„ APPLEë¡œ ë³€ê²½
    return this.handleSocialLogin(req, res, SocialProvider.APPLE);
  }

  /**
   * âœ… ì†Œì…œ ë¡œê·¸ì¸ ê³µí†µ ì²˜ë¦¬ í•¨ìˆ˜ (Private Helper)
   * ê¸°ì¡´ì— 4ë²ˆ ë°˜ë³µë˜ë˜ ì½”ë“œë¥¼ í•˜ë‚˜ë¡œ í†µí•©í–ˆìŠµë‹ˆë‹¤.
   */
  private async handleSocialLogin(
    req: any,
    res: Response,
    provider: SocialProvider,
  ) {
    try {
      // pending_user_type ì¿ í‚¤ì—ì„œ ìš”ì²­ëœ íšŒì› ìœ í˜• ì½ê¸°
      const cookieUserType = req.cookies?.pending_user_type || null;
      // ì¿¼ë¦¬ íŒŒë¼ë¯¸í„° fallback (í”„ë¡ì‹œ ê²½ìœ  ì‹œ)
      const queryUserType = req.query?.userType || null;
      const requestedUserType = cookieUserType || queryUserType || null;
      console.log('[ì†Œì…œ ë¡œê·¸ì¸ ì½œë°±]', {
        provider,
        cookieUserType,
        queryUserType,
        requestedUserType,
        allCookies: JSON.stringify(req.cookies),
        email: req.user?.email,
        providerId: req.user?.providerId,
      });

      const user = {
        email: req.user.email,
        firstName: req.user.firstName,
        lastName: req.user.lastName,
        picture: req.user.picture,
        provider: provider,
        providerId: req.user.providerId,
      };

      // AuthService ì§ì ‘ í˜¸ì¶œ (requestedUserType ì „ë‹¬)
      const result = await this.authService.findOrCreateOAuthUser(
        user,
        requestedUserType,
      );

      console.log('[ì†Œì…œ ë¡œê·¸ì¸ ì„±ê³µ]', {
        sessionId: result.sessionId,
        message: result.message,
      });

      // ì¿ í‚¤ ì„¤ì • (domain ì œê±°í•˜ì—¬ í˜„ì¬ ë„ë©”ì¸ ì‚¬ìš©)
      res.cookie('sessionId', result.sessionId, {
        httpOnly: true,
        secure: false,
        sameSite: 'lax',
        maxAge: 2 * 60 * 60 * 1000,
        path: '/',
      });

      // pending_user_type ì¿ í‚¤ ì‚­ì œ
      res.clearCookie('pending_user_type', { path: '/' });

      // ë©”ì¸ í˜ì´ì§€ë¡œ ë¦¬ë‹¤ì´ë ‰íŠ¸ (sessionIdë¥¼ URL íŒŒë¼ë¯¸í„°ë¡œ ì „ë‹¬)
      const baseUrl =
        process.env.NODE_ENV === 'production'
          ? 'http://jobchaja.com'
          : 'http://localhost:3000';
      const redirectUrl = `${baseUrl}?sessionId=${encodeURIComponent(result.sessionId)}`;

      console.log('[ì†Œì…œ ë¡œê·¸ì¸] ë¦¬ë‹¤ì´ë ‰íŠ¸ URL:', baseUrl);
      return res.redirect(redirectUrl);
    } catch (error) {
      console.error('[ì†Œì…œ ë¡œê·¸ì¸ ì—ëŸ¬]', {
        provider,
        email: req.user?.email,
        error: error.message,
        stack: error.stack,
      });
      throw error;
    }
  }
}
